argocd/apps/infra/victoriametrics/fmt2/vmselect-sea1-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-vmselect-sea1
  namespace: victoriametrics
  annotations:
    tailscale.com/tailnet-fqdn: "svc-vmselect-sea1.tail285d8f.ts.net"
spec:
  externalName: placeholder
  type: ExternalName
