argocd/apps/infra/victoriametrics/fmt2/ingress-vmalert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmalert
  namespace: victoriametrics
  annotations:
    tailscale.com/hostname: "svc-vmalert-fmt2"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      # Operator-generated service for the VMAlert CR named "vmalert".
      name: vmalert-vmalert
      port:
        number: 8080
  tls:
    - hosts:
        - svc-vmalert-fmt2
